<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/loginbackground"
    tools:context=".views.LoginPage">

    <VideoView
        android:id="@+id/VIDloginBG"
        android:layout_width="4000px"
        android:layout_height="match_parent"
        android:foregroundTint="@android:color/background_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/IVvideoColour"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_launcher_background" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="361dp"
        android:layout_height="517dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/loginbackgroundshape"
        android:contentDescription="TODO"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/IVvideoColour"
        app:layout_constraintVertical_bias="0.951" />

    <EditText
        android:id="@+id/ETloginEmailAddress"
        android:layout_width="279dp"
        android:layout_height="55dp"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:hint="Enter email address"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/ETloginPassword"
        app:layout_constraintEnd_toEndOf="@+id/imageView3"
        app:layout_constraintStart_toStartOf="@+id/imageView3"
        app:layout_constraintTop_toTopOf="@+id/imageView3"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/BTNsignUp"
        android:layout_width="298dp"
        android:layout_height="61dp"
        android:background="@drawable/buttonbackground"
        android:text="Signup"
        android:textColor="@android:color/white"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView3"
        app:layout_constraintEnd_toEndOf="@+id/imageView3"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="@+id/imageView3"
        app:layout_constraintTop_toTopOf="@+id/imageView3"
        app:layout_constraintVertical_bias="0.957" />

    <EditText
        android:id="@+id/ETloginPassword"
        android:layout_width="279dp"
        android:layout_height="55dp"
        android:layout_marginBottom="284dp"
        android:ems="10"
        android:hint="Enter password"
        android:inputType="textPersonName"
        android:password="true"
        app:layout_constraintBottom_toBottomOf="@+id/imageView3"
        app:layout_constraintEnd_toEndOf="@+id/imageView3"
        app:layout_constraintStart_toStartOf="@+id/imageView3" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/BTNlogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        app:backgroundTint="#365CBB"
        app:layout_constraintBottom_toBottomOf="@+id/imageView3"
        app:layout_constraintEnd_toEndOf="@+id/imageView3"
        app:layout_constraintHorizontal_bias="0.921"
        app:layout_constraintStart_toStartOf="@+id/imageView3"
        app:layout_constraintTop_toTopOf="@+id/imageView3"
        app:layout_constraintVertical_bias="0.676"
        app:srcCompat="@drawable/ic_loginarrow" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="312dp"
        android:layout_height="243dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="416dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/logo_crop" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="178dp"
        android:layout_height="61dp"
        android:layout_marginStart="28dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/BTNsignUp"
        app:layout_constraintStart_toStartOf="@+id/imageView3"
        app:srcCompat="@drawable/signuparrow" />

</androidx.constraintlayout.widget.ConstraintLayout>