<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item

        android:id="@+id/TBAccount"
        android:icon="@drawable/ic_nav_account_24dp"
        android:title="Account"
        app:showAsAction="ifRoom" />

</menu>

